added exception handlers for controllers

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,9 @@
 #spring.datasource.url=jdbc:postgres://localhost:5432/student_tracker
 #spring.datasource.username=springstudent
 #spring.datasource.password=springstudent
+
+logging.level.org.hibernate.SQL = debug
+logging.level.org.hibernate.orm.jdbc.bind = trace
+
+# Configure JPA/Hibernate to auto create the table
+spring.jpa.hibernate.ddl-auto=update
