Spring security JDBC authentication with passwords in DB

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ logging.level.org.hibernate.orm.jdbc.bind = trace
 
 # Configure JPA/Hibernate to auto create the table
 spring.jpa.hibernate.ddl-auto=update
+
+logging.level.org.springframework.security=DEBUG
